--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,11 +3,11 @@ type: plugin
 author: sawyer-shi
 name: huawei_obs
 label:
-  en_US: huawei_obs
-  zh_Hans: huawei_obs
+  en_US: Huawei Cloud OBS
+  zh_Hans: 华为云OBS对象存储
 description:
   en_US: Upload files to Huawei Cloud OBS and return the file URL; Enter the URL of the Huawei Cloud OBS file to return the file itself
-  zh_Hans: 上传文件到华为云OBS并返回文件URL；输入华为云OBS文件的URL以返回文件本身
+  zh_Hans: 用于与华为云OBS交互，支持文件上传和文件获取
 icon: icon.png
 resource:
   memory: 268435456
