--- a/tools/get_file_by_url.yaml
+++ b/tools/get_file_by_url.yaml
@@ -3,7 +3,7 @@ identity:
   author: "sawyer-shi"
   label:
     en_US: "Get File by Huawei Cloud OBS URL"
-    zh_Hans: "通过华为云OBS URL获取文件"
+    zh_Hans: "通过OBS获取文件"
   tags:
     - utilities
     - productivity
