--- a/provider/huawei_obs.yaml
+++ b/provider/huawei_obs.yaml
@@ -8,6 +8,9 @@ identity:
     en_US: "Huawei Cloud OBS: supporting file upload, file download, batch upload files, batch download files, and public file download"
     zh_Hans: "华为云OBS: 支持文件上传、文件下载、批量上传文件、批量下载文件、公开文件下载"
   icon: "icon.png"
+  tags:
+    - utilities
+    - productivity
 
 tools:
   - tools/get_file_by_url.yaml
