--- a/tools/get_files_by_urls.yaml
+++ b/tools/get_files_by_urls.yaml
@@ -3,7 +3,7 @@ identity:
   author: "sawyer-shi"
   label:
     en_US: "Get Multiple Files by Huawei Cloud OBS URLs"
-    zh_Hans: "通过OBS批量获取文件"
+    zh_Hans: "批量获取OBS文件"
   tags:
     - utilities
     - productivity
